--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.4.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.8.4"
+    "helmet": "^8.0.0",
+    "mongoose": "^8.8.4",
+    "morgan": "^1.10.0",
+    "nanoid": "^5.0.9"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
