--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
-    "nanoid": "^3.3.8"
+    "nanoid": "^3.3.8",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
