--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "colors": "^1.4.0",
     "debug": "^4.4.0",
     "dotenv": "^16.4.7",
