--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.8",
+    "path": "^0.12.7",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
