--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"node index.js\" \"cd react-client && npm run dev\""
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "nodemon": "^3.1.7"
   }
 }
