--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node index.js\" \"cd react-client && npm run dev\""
+    "server": "node index.js",
+    "client": "cd react-client && npm run dev",
+    "start": "npm-run-all --parallel server client"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,7 @@
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
-    "concurrently": "^9.1.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "npm-run-all": "^4.1.5"
   }
 }
