--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "chalk": "^5.3.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "^4.4.0",
